# SPDX-License-Identifier: GPL-3.0-or-later
pages = [
  'curve_fitting.page',
  'import.page',
  'index.page',
  'manipulate.page',
  'legal.xml',
]

media = [
  'media/add_data_light.png',
  'media/add_equation_light.png',
  'media/curve_fitting_light.png',
  'media/custom_transform_light.png',
  'media/se.sjoerd.Graphs.svg',
]

gnome.yelp(meson.project_name(),
  sources: pages,
  media: media,
)
