# SPDX-License-Identifier: GPL-3.0-or-later
pages = [
  'curve_fitting.page',
  'edit-item.page',
  'edit-style.page',
  'export.page',
  'figure_settings.page',
  'import.page',
  'index.page',
  'manipulate.page',
  'projects.page',
  'window.page',
  'legal.xml',
]

media = [
  'media/se.sjoerd.Graphs.svg',
]

gnome.yelp('graphs',
  sources: pages,
    media: media,
)
